--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -8,7 +8,7 @@
 <body>
   <form method="POST" th:action="@{/orders}" th:object="${order}">
     <h1>Order your taco creations!</h1>
-    <img th:src="@{/images/TacoCloud.png}"/>
+    <img th:src="@{/images/TacoCloud.png}" alt="taco cloud logo"/>
     <a th:href="@{/design}" id="another">Design another taco</a>
     <br />
 
@@ -18,36 +18,36 @@
 
     <h3>Deliver my taco masterpieces to...</h3>
     <label for="name">Name: </label>
-    <input type="text" th:field="*{name}"/>
+    <input type="text" id="name" th:field="*{name}"/>
     <br />
 
     <label for="street">Street address: </label>
-    <input type="text" th:field="*{street}"/>
+    <input type="text" id="street" th:field="*{street}"/>
     <br />
 
     <label for="city">City: </label>
-    <input type="text" th:field="*{city}"/>
+    <input type="text" id="city" th:field="*{city}"/>
     <br />
 
     <label for="state">State: </label>
-    <input type="text" th:field="*{state}"/>
+    <input type="text" id="state" th:field="*{state}"/>
     <br />
 
     <label for="zip">Zip code: </label>
-    <input type="text" th:field="*{zip}"/>
+    <input type="text" id="zip" th:field="*{zip}"/>
     <br />
 
     <h3>Here's how I'll pay...</h3>
     <label for="ccNumber">Credit Card #: </label>
-    <input type="text" th:field="*{ccNumber}"/>
+    <input type="text" id="ccNumber" th:field="*{ccNumber}"/>
     <br />
 
     <label for="ccExpiration">Expiration: </label>
-    <input type="text" th:field="*{ccExpiration}"/>
+    <input type="text" id="ccExpiration" th:field="*{ccExpiration}"/>
     <br />
 
     <label for="ccCVV">CVV: </label>
-    <input type="text" th:field="*{ccCVV}"/>
+    <input type="text" id="ccCVV" th:field="*{ccCVV}"/>
     <br />
 
     <button type="submit">Submit order</button>
