--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -19,35 +19,54 @@
     <h3>Deliver my taco masterpieces to...</h3>
     <label for="name">Name: </label>
     <input type="text" id="name" th:field="*{name}"/>
+    <span class="validationError" th:if="${#fields.hasErrors('name')}"
+          th:errors="*{name}">Name is required</span>
     <br />
 
     <label for="street">Street address: </label>
     <input type="text" id="street" th:field="*{street}"/>
+    <span class="validationError" th:if="${#fields.hasErrors('street')}"
+          th:errors="*{street}">Street is required</span>
     <br />
 
     <label for="city">City: </label>
     <input type="text" id="city" th:field="*{city}"/>
+    <span class="validationError" th:if="${#fields.hasErrors('city')}"
+          th:errors="*{city}">City is required</span>
     <br />
 
     <label for="state">State: </label>
     <input type="text" id="state" th:field="*{state}"/>
+    <span class="validationError" th:if="${#fields.hasErrors('state')}"
+          th:errors="*{state}">State is required</span>
     <br />
 
     <label for="zip">Zip code: </label>
     <input type="text" id="zip" th:field="*{zip}"/>
+    <span class="validationError" th:if="${#fields.hasErrors('zip')}"
+          th:errors="*{zip}">Zip Code is required</span>
     <br />
 
     <h3>Here's how I'll pay...</h3>
     <label for="ccNumber">Credit Card #: </label>
     <input type="text" id="ccNumber" th:field="*{ccNumber}"/>
+    <span class="validationError" th:if="${#fields.hasErrors('ccNumber')}"
+          th:errors="*{ccNumber}">CC Number
+      error</span>
     <br />
 
     <label for="ccExpiration">Expiration: </label>
     <input type="text" id="ccExpiration" th:field="*{ccExpiration}"/>
+    <span class="validationError" th:if="${#fields.hasErrors('ccExpiration')}"
+          th:errors="*{ccExpiration}">Expiration date
+      error</span>
     <br />
 
     <label for="ccCVV">CVV: </label>
     <input type="text" id="ccCVV" th:field="*{ccCVV}"/>
+    <span class="validationError" th:if="${#fields.hasErrors('ccCVV')}"
+          th:errors="*{ccCVV}">CVV Number
+      error</span>
     <br />
 
     <button type="submit">Submit order</button>
