Add alt tag to taco cloud image

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Design your taco!</h1>
-    <img th:src="@{/images/TacoCloud.png}" />
+    <img alt="Taco cloud logo" th:src="@{/images/TacoCloud.png}" />
 
     <form method="POST" th:object="${design}">
       <div class="grid">
